# kaoyan-408-qq-robot

./: .env  .env.dev  .env.prod  .gitignore  DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  mypy.ini  pyproject.toml
resource/prompts/: chat_prompt.txt  role_play_prompt.txt
resource/roles/: assistant.json  humorous.json  teacher.json
scripts/: start.sh  stop.sh  test.sh
src/: __init__.py  bot.py
src/core/: __init__.py  context.py  intent.py  langgraph.py  router.py  state.py
src/managers/: __init__.py  ban.py  token.py  user.py
src/modules/: __init__.py  chat.py  context_cmd.py  role_play.py  weather.py
src/plugins/llm-endpoint/: __init__.py
src/plugins/robot/: __init__.py
src/service/: __init__.py  indent_service.py  llm_service.py  service.py  weather_service.py
src/storage/: __init__.py  cache.py  database.py  models.py  orm_models.py
src/test/: graph_test.py  test.py
src/utils/: __init__.py  config.py  helpers.py  load_qq_robot_config.py  logger.py  path_config.py
tests/integration/: __init__.py  test_message_flow.py
tests/unit/: test_core.py  test_database.py  test_helpers.py  test_managers.py  test_plugin.py  test_services_and_modules.py
